--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.16.6",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-sound": "^0.12.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
